temporarily disable semver checks because it's wigging out.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,52 +10,51 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-
   publish-crate:
     name: Publish to crates.io
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout sources
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      - name: Checkout sources
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: Install stable toolchain
-      uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
-        toolchain: stable
-        override: true
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
 
-    - name: Install Dependencies
-      run: |
-        cd /tmp
-        curl "https://heasarc.gsfc.nasa.gov/FTP/software/fitsio/c/cfitsio-3.49.tar.gz" -o cfitsio.tar.gz
-        tar -xf cfitsio.tar.gz
-        rm cfitsio.tar.gz
-        cd cfitsio-3.49
-        ./configure --prefix=/usr/local --enable-reentrant --disable-curl
-        sudo make shared
-        sudo make install
-        cd ..
+      - name: Install Dependencies
+        run: |
+          cd /tmp
+          curl "https://heasarc.gsfc.nasa.gov/FTP/software/fitsio/c/cfitsio-3.49.tar.gz" -o cfitsio.tar.gz
+          tar -xf cfitsio.tar.gz
+          rm cfitsio.tar.gz
+          cd cfitsio-3.49
+          ./configure --prefix=/usr/local --enable-reentrant --disable-curl
+          sudo make shared
+          sudo make install
+          cd ..
 
-        if [[ "$OSTYPE" == "linux-gnu"* ]]; then
-          sudo ldconfig
-        fi
+          if [[ "$OSTYPE" == "linux-gnu"* ]]; then
+            sudo ldconfig
+          fi
 
-    - name: Check semver
-      uses: obi1kenobi/cargo-semver-checks-action@v1
+      # - name: Check semver
+      #   uses: obi1kenobi/cargo-semver-checks-action@v1
 
-    - run: cargo package --locked
-    - uses: taiki-e/create-gh-release-action@v1
-      with:
-        changelog: RELEASES.md
-        title: $version
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Cargo publish
-      run: |
-        cargo publish --token ${CARGO_REGISTRY_TOKEN}
-      env:
-        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - run: cargo package --locked
+      - uses: taiki-e/create-gh-release-action@v1
+        with:
+          changelog: RELEASES.md
+          title: $version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Cargo publish
+        run: |
+          cargo publish --token ${CARGO_REGISTRY_TOKEN}
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
