--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,8 +43,8 @@ jobs:
             sudo ldconfig
           fi
 
-      # - name: Check semver
-      #   uses: obi1kenobi/cargo-semver-checks-action@v1
+      - name: Check semver
+        uses: obi1kenobi/cargo-semver-checks-action@v1
 
       - run: cargo package --locked
       - uses: taiki-e/create-gh-release-action@v1
