--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "marlu"
-version = "0.14.0"
+version = "0.15.0"
 authors = [
     "Christopher H. Jordan <christopherjordan87@gmail.com>",
     "Dev Null <dev.null@curtin.edu.au>",
 ]
 edition = "2021"
-rust-version = "1.64"
+rust-version = "1.65"
 license = "MPL-2.0"
 readme = "README.md"
 description = "Convenience Rust code that handles coordinate transformations, Jones matrices, I/O. for the Murchison Widefield Array (MWA) radio telescope. Previously known as mwa_rust_core"
@@ -43,7 +43,7 @@ cfg-if = "1.0.0"
 erfa = "0.2.1"
 hifitime = "3.6.0"
 itertools = "0.10.0"
-lazy_static = "1.4.0"
+lazy_static = "~1.5"
 log = "0.4.14"
 ndarray = { version = "0.16.0", features = ["rayon"] }
 num-complex = "0.4.1"
@@ -53,11 +53,11 @@ tar = "0.4.15"
 thiserror = "1.0.0"
 
 # "cfitsio" feature
-fitsio = { version = "0.20.0", optional = true }
-fitsio-sys = { version = "0.4.0", optional = true }
+fitsio = { version = "~0.21", optional = true }
+fitsio-sys = { version = "~0.5", optional = true }
 
 # "mwalib" feature
-mwalib = { version = "1.5.0", optional = true }
+mwalib = { version = "1.7.1", optional = true }
 
 # "ms" feature
 flate2 = { version = "1.0.13", optional = true }
