--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,11 +53,11 @@ tar = "0.4.15"
 thiserror = "1.0.0"
 
 # "cfitsio" feature
-fitsio = { version = "~0.21", optional = true }
+fitsio = { version = "0.21.6", optional = true }
 fitsio-sys = { version = "~0.5", optional = true }
 
 # "mwalib" feature
-mwalib = { version = "1.7.1", optional = true }
+mwalib = { version = "1.8.0", optional = true }
 
 # "ms" feature
 flate2 = { version = "1.0.13", optional = true }
@@ -97,8 +97,6 @@ name = "bench_io"
 harness = false
 
 [patch.crates-io]
-# TODO: get rid of this once MSRV >= 1.65
-dashmap = { git = "https://github.com/xacrimon/dashmap", tag = "v5.5.2" }          # v5.5.3 msrv is 1.65
-regex = { git = "https://github.com/rust-lang/regex", tag = "regex-syntax-0.7.5" } # regex-syntax > 0.8 msrv is 1.65
+mwalib = { git = "https://github.com/MWATelescope/mwalib", branch = "pyo3_stub_chrono_fix" }
 # TODO: get rid of this once MSRV >= 1.70
 ciborium = { git = "https://github.com/enarx/ciborium", tag = "v0.2.1" } # ciborium-ll v > 0.2.1 needs half ^2.2, half v > 2.3.x msrv is 1.70
