--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,5 +98,8 @@ harness = false
 
 [patch.crates-io]
 # mwalib = { git = "https://github.com/MWATelescope/mwalib", branch = "pyo3_stub_chrono_fix" }
+# TODO: get rid of this once MSRV >= 1.67, built@0.7.3+git2 => icu_normalizer@1.5.0 => rustc 1.65.0
+built = { git = "https://github.com/lukaslueg/built", tag = "0.7.3" }
+url = { git = "https://github.com/servo/rust-url", tag = "v2.5.2" }
 # TODO: get rid of this once MSRV >= 1.70
 ciborium = { git = "https://github.com/enarx/ciborium", tag = "v0.2.1" } # ciborium-ll v > 0.2.1 needs half ^2.2, half v > 2.3.x msrv is 1.70
