--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "marlu"
-version = "0.14.0"
+version = "0.15.0"
 authors = [
     "Christopher H. Jordan <christopherjordan87@gmail.com>",
     "Dev Null <dev.null@curtin.edu.au>",
 ]
 edition = "2021"
-rust-version = "1.64"
+rust-version = "1.65"
 license = "MPL-2.0"
 readme = "README.md"
 description = "Convenience Rust code that handles coordinate transformations, Jones matrices, I/O. for the Murchison Widefield Array (MWA) radio telescope. Previously known as mwa_rust_core"
@@ -43,7 +43,7 @@ cfg-if = "1.0.0"
 erfa = "0.2.1"
 hifitime = "3.6.0"
 itertools = "0.10.0"
-lazy_static = "1.4.0"
+lazy_static = "~1.5"
 log = "0.4.14"
 ndarray = { version = "0.16.0", features = ["rayon"] }
 num-complex = "0.4.1"
@@ -53,11 +53,11 @@ tar = "0.4.15"
 thiserror = "1.0.0"
 
 # "cfitsio" feature
-fitsio = { version = "0.20.0", optional = true }
-fitsio-sys = { version = "0.4.0", optional = true }
+fitsio = { version = "0.21.6", optional = true }
+fitsio-sys = { version = "~0.5", optional = true }
 
 # "mwalib" feature
-mwalib = { version = "1.5.0", optional = true }
+mwalib = { version = "1.8.2", optional = true }
 
 # "ms" feature
 flate2 = { version = "1.0.13", optional = true }
@@ -97,8 +97,9 @@ name = "bench_io"
 harness = false
 
 [patch.crates-io]
-# TODO: get rid of this once MSRV >= 1.65
-dashmap = { git = "https://github.com/xacrimon/dashmap", tag = "v5.5.2" }          # v5.5.3 msrv is 1.65
-regex = { git = "https://github.com/rust-lang/regex", tag = "regex-syntax-0.7.5" } # regex-syntax > 0.8 msrv is 1.65
+# mwalib = { git = "https://github.com/MWATelescope/mwalib", branch = "pyo3_stub_chrono_fix" }
+# TODO: get rid of this once MSRV >= 1.67, built@0.7.3+git2 => icu_normalizer@1.5.0 => rustc 1.65.0
+built = { git = "https://github.com/lukaslueg/built", tag = "0.7.3" }
+url = { git = "https://github.com/servo/rust-url", tag = "v2.5.2" }
 # TODO: get rid of this once MSRV >= 1.70
 ciborium = { git = "https://github.com/enarx/ciborium", tag = "v0.2.1" } # ciborium-ll v > 0.2.1 needs half ^2.2, half v > 2.3.x msrv is 1.70
