--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,7 @@ serial_test = "0.9.0"
 tempfile = "3.3.0"
 
 [build-dependencies]
-built = { version = "~0.7.3", default-features = false, features = [
+built = { version = "=0.7.6", default-features = false, features = [
     "chrono",
     "git2",
     "semver",
@@ -99,7 +99,7 @@ harness = false
 [patch.crates-io]
 # mwalib = { git = "https://github.com/MWATelescope/mwalib", branch = "pyo3_stub_chrono_fix" }
 # TODO: get rid of this once MSRV >= 1.67, built@0.7.3+git2 => icu_normalizer@1.5.0 => rustc 1.65.0
-built = { git = "https://github.com/lukaslueg/built", tag = "0.7.3" }
+#built = { git = "https://github.com/lukaslueg/built", tag = "0.7.3" }
 url = { git = "https://github.com/servo/rust-url", tag = "v2.5.2" }
 textwrap = { git = "https://github.com/mgeisler/textwrap", tag = "0.16.1" }
 flate2 = { git = "https://github.com/rust-lang/flate2-rs", tag = "1.0.35" }
